logs/dag_id=get_todays_gamesv2/run_id=manual__2023-05-07T17:50:33.671011+00:00/task_id=create_sql_table_task/attempt=1.log
[2023-05-07T17:50:39.578+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_todays_gamesv2.create_sql_table_task manual__2023-05-07T17:50:33.671011+00:00 [queued]>
[2023-05-07T17:50:39.597+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_todays_gamesv2.create_sql_table_task manual__2023-05-07T17:50:33.671011+00:00 [queued]>
[2023-05-07T17:50:39.597+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-07T17:50:39.597+0000] {taskinstance.py:1283} INFO - Starting attempt 1 of 1
[2023-05-07T17:50:39.597+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-07T17:50:39.634+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): create_sql_table_task> on 2023-05-07 17:50:33.671011+00:00
[2023-05-07T17:50:39.650+0000] {standard_task_runner.py:55} INFO - Started process 849 to run task
[2023-05-07T17:50:39.670+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'get_todays_gamesv2', 'create_sql_table_task', 'manual__2023-05-07T17:50:33.671011+00:00', '--job-id', '1091', '--raw', '--subdir', 'DAGS_FOLDER/todays_gamesv2.py', '--cfg-path', '/tmp/tmpfh2x3q0r']
[2023-05-07T17:50:39.670+0000] {standard_task_runner.py:83} INFO - Job 1091: Subtask create_sql_table_task
[2023-05-07T17:50:39.803+0000] {task_command.py:388} INFO - Running <TaskInstance: get_todays_gamesv2.create_sql_table_task manual__2023-05-07T17:50:33.671011+00:00 [running]> on host f7ab54451666
[2023-05-07T17:50:39.978+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=get_todays_gamesv2
AIRFLOW_CTX_TASK_ID=create_sql_table_task
AIRFLOW_CTX_EXECUTION_DATE=2023-05-07T17:50:33.671011+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-07T17:50:33.671011+00:00
[2023-05-07T17:50:39.979+0000] {sql.py:254} INFO - Executing: 
        drop table if exists games;
        create table games (
            away_name VARCHAR(40),
            home_name VARCHAR(40),
            away_probable_pitcher VARCHAR(40),
            home_probable_pitcher VARCHAR(40),
            venue_name VARCHAR(40),
            game_date DATE,
            home_wins INT,
            home_losses INT,
            home_gb DECIMAL
            away_wins INT,
            away_losses INT,
            away_gb DECIMAL
            );
    
[2023-05-07T17:50:39.995+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-07T17:50:40.613+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-07T17:50:40.629+0000] {sql.py:375} INFO - Running statement: 
        drop table if exists games;
        create table games (
            away_name VARCHAR(40),
            home_name VARCHAR(40),
            away_probable_pitcher VARCHAR(40),
            home_probable_pitcher VARCHAR(40),
            venue_name VARCHAR(40),
            game_date DATE,
            home_wins INT,
            home_losses INT,
            home_gb DECIMAL
            away_wins INT,
            away_losses INT,
            away_gb DECIMAL
            );
    , parameters: None
[2023-05-07T17:50:40.632+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "away_wins"
LINE 13:             away_wins INT,
                     ^

[2023-05-07T17:50:40.645+0000] {taskinstance.py:1326} INFO - Marking task as FAILED. dag_id=get_todays_gamesv2, task_id=create_sql_table_task, execution_date=20230507T175033, start_date=20230507T175039, end_date=20230507T175040
[2023-05-07T17:50:40.658+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 1091 for task create_sql_table_task (syntax error at or near "away_wins"
LINE 13:             away_wins INT,
                     ^
; 849)
[2023-05-07T17:50:40.686+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-07T17:50:40.744+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
